--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@ layout: default
 
 <div class="page clearfix" index>
     <div class="left">
-        <h1>BitcoinCash Classic!</h1>
-        <small>±ÈÌØ±ÒÏÖ½ğÔ­Á´µÄÏÖÔÚºÍÎ´À´</small>
+        <h1>Welcome to HyG's Blog!</h1>
+        <small>è¿™é‡Œè®°å½•ç€æˆ‘çš„å‰ç«¯å­¦ä¹ ä¹‹è·¯</small>
         <hr>
         <ul>
             {% for post in paginator.posts %}
@@ -99,7 +99,7 @@ layout: default
                     {% endfor %}
                 </ul>
             </div>
-            <!-- å…¶ä»–divæ¡†æ”¾åˆ°è¿™é‡?-->
+            <!-- å…¶ä»–divæ¡†æ”¾åˆ°è¿™é‡Œ -->
             <div class="side">
                 <div>
                     <i class="fa fa-tags"></i>
